Refactored code works

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgibTs3pWvJOb3YgFVGh9Y",
+      "authorship_tag": "ABX9TyOJ9+8KVe3fH1osnVo2S6qY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -924,9 +924,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 262
+          "height": 35
         },
-        "outputId": "fd5251a7-721b-4db8-a071-581864356c8f"
+        "outputId": "bc51f464-cbd2-43ce-e785-1e89582f240c"
       },
       "source": [
         "import os, shutil\n",
@@ -935,9 +935,9 @@
         "print(os.getcwd())\n",
         "# current wd is gdrive\n",
         "\n",
-        "original_dataset_dir = '/content/drive/My\\ Drive/Colab\\ Notebooks'\n",
+        "original_dataset_dir = '/content/drive/My Drive/Colab Notebooks'\n",
         "\n",
-        "base_dir = '/content/drive/My\\ Drive/Colab\\ Notebooks/cats_and_dogs_small'\n",
+        "base_dir = '/content/drive/My Drive/Colab Notebooks/cats_and_dogs_small'\n",
         "os.mkdir(base_dir)\n",
         "\n",
         "train_dir = os.path.join(base_dir, 'train')\n",
@@ -1001,7 +1001,7 @@
         "    dst = os.path.join(test_dogs_dir, fname)\n",
         "    shutil.copyfile(src, dst)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,17 +1009,156 @@
             "/content\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZnqqDZKiwTSe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         },
+        "outputId": "049d1b80-1d78-49ab-a3fd-85c89955ec7c"
+      },
+      "source": [
+        "print('total training cat images:', len(os.listdir(train_cats_dir)))"
+      ],
+      "execution_count": 13,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-7d488d16f1ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mbase_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/content/drive/My\\ Drive/Colab\\ Notebooks/cats_and_dogs_small'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mtrain_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/My\\\\ Drive/Colab\\\\ Notebooks/cats_and_dogs_small'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "total training cat images: 1000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qgvIuXclwzTe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5b62adc0-283f-4b4d-f0b9-3a20419b5cdf"
+      },
+      "source": [
+        "print('total training dog images:', len(os.listdir(train_dogs_dir)))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total training dog images: 1000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UnuW2QptxFiM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d7ff25e5-0c71-4e1f-e2a1-deb0ff62d94f"
+      },
+      "source": [
+        "print('total validation cat images:', len(os.listdir(validation_cats_dir)))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total training dog images: 500\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D6zKqxcPxaRP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a8bf405f-7fac-4d81-a038-5cafa69dd11b"
+      },
+      "source": [
+        "print('total validation dog images:', len(os.listdir(validation_dogs_dir)))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total validation dog images: 500\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8sat9iOfxw_r",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6031abf7-09dc-4f03-d6bf-d406fe858409"
+      },
+      "source": [
+        "print('total test cat images:', len(os.listdir(test_cats_dir)))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total test cat images: 500\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Nxf6tgRyJ5Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a2657407-c07f-4e50-cf0f-42a47524f22d"
+      },
+      "source": [
+        "print('total test dog images:', len(os.listdir(test_dogs_dir)))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total test dog images: 500\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
