--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJ9+8KVe3fH1osnVo2S6qY",
+      "authorship_tag": "ABX9TyPHFsJ+7fZVwB1MJwogBxC0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1169,7 +1169,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Psuedo code to refactor "
+        "After refactoring the code for google Colab, We have 2,000 training imgages, 1,000 validation images, and 1,000 test images. Each split contains the same number of samples from each class: this is a balanced binary-classification problem, so we can use classification accuracy as a measure of success."
       ]
     },
     {
@@ -1179,65 +1179,127 @@
         "colab_type": "text"
       },
       "source": [
-        "```\n",
-        "import os, shutil\n",
-        "\n",
-        "orinal_dataset_dir = '/Users/fchollet/Downloads/kaggle_original_data'\n",
-        "\n",
-        "base_dir = '/Users/fchollet/Downloads/cats_and_dogs_small'\n",
-        "os.mkdir(base_dir)\n",
-        "\n",
-        "train_dir = os.path.join(base_dir, 'train')\n",
-        "os.mkdir(train_dir)\n",
-        "validation_dir = os.path.join(base_dir, 'test')\n",
-        "os.mkdir(validation_dir)\n",
-        "test_dir = os.path.join(base_dir, 'test')\n",
-        "os.mkdir(test_dir)\n",
-        "\n",
-        "train_cats = os.path.join(train_dir, 'cats')\n",
-        "os.mkdir(trains_cats_dir)\n",
-        "\n",
-        "train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
-        "os.mkdir(train_dogs_dir)\n",
-        "\n",
-        "validation_cats_dir = os.path.join(validation_dir, 'cats')\n",
-        "os.mdkdir(validation_cats_dir)\n",
-        "\n",
-        "validation_dogs_dir = os.path.join(validation_dir, 'dogs')\n",
-        "os.mkdir(validation_dogs_dir)\n",
-        "\n",
-        "test_cats_dir = os.path.join(test_dir, 'cats')\n",
-        "os.mkdir(test_cats_dir)\n",
-        "\n",
-        "test_dogs_dir = os.path.join(test_dir, 'dogs')\n",
-        "os.mkdir(test_dogs_dir)\n",
-        "\n",
-        "fnames = ['cat.{}.jpg'.format(i) for i in range(1000) ]\n",
-        "for fname in fnames:\n",
-        "    src = os.path.join(original_dataset_dir, fname)\n",
-        "    dst = os.path.join(train_cats_dir, fname)\n",
-        "    shutil.copyfile(src, dst)\n",
-        "    \n",
-        "fnames = ['cat.{}.jpg'.format(i) for i in range(1000, 1500) ]\n",
-        "for fname in fnames:\n",
-        "    src = os.path.join(original_dataset_dir, fname)\n",
-        "    dst = os.path.join(validation_cats_dir, fname)\n",
-        "    shutil.copyfile(src, dst)\n",
-        "\n",
-        "fnames = ['cat.{}.jpg'.format(i) for i in range(1500, 2000) ]\n",
-        "    src = os.path.join(original_dataset_dir, fname)\n",
-        "    dst = os.path.join(test_cats_dir, fname)\n",
-        "    shutil.copyfile(src, dst)\n",
-        "\n",
-        "fnames = ['dog.{}.jpg'.fromat(i) for i in range(1000) ]\n",
-        "for fname in fnames:\n",
-        "    src = os.path.join(original_dataset_dir, fname)\n",
-        "    dst = os.path.join(train_dogs_dir, fname)\n",
-        "    shutil.copyfile(src, dst)\n",
-        "\n",
-        "fnames \n",
-        "```\n"
+        "#5.2.3 Building your network"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uepk3Txy75_Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import layers\n",
+        "from keras import models\n",
+        "\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+        "                        input_shape=(150, 150, 3)))\n",
+        "model.add(layers.MaxPooling2D(2, 2))\n",
+        "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPooling2D(2, 2))\n",
+        "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPooling2D(2, 2))\n",
+        "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPooling2D(2, 2))\n",
+        "model.add(layers.Flatten())\n",
+        "model.add(layers.Dense(512, activation='relu'))\n",
+        "model.add(layers.Dense(1, activation='sigmoid'))"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uqpx5mwv-ayR",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let's look at the model summary and how the feature map changes with each layer:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ynPEKyxr-ly9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 557
+        },
+        "outputId": "5145eba1-306a-475e-dadc-2011528d98f0"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_1 (Conv2D)            (None, 148, 148, 32)      896       \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_1 (MaxPooling2 (None, 74, 74, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_2 (Conv2D)            (None, 72, 72, 64)        18496     \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_2 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_3 (Conv2D)            (None, 34, 34, 128)       73856     \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_3 (MaxPooling2 (None, 17, 17, 128)       0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_4 (Conv2D)            (None, 15, 15, 128)       147584    \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_4 (MaxPooling2 (None, 7, 7, 128)         0         \n",
+            "_________________________________________________________________\n",
+            "flatten_1 (Flatten)          (None, 6272)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 512)               3211776   \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 1)                 513       \n",
+            "=================================================================\n",
+            "Total params: 3,453,121\n",
+            "Trainable params: 3,453,121\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yjbvCERK--OG",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "byRfz7aD--iR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import optimizers\n",
+        "\n",
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer=optimizers.RMSprop(lr=1e-4),\n",
+        "              metrics=['acc'])"
+      ],
+      "execution_count": 21,
+      "outputs": []
     }
   ]
 }
