--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVaM4N7Ywl6oa4Gz4E9vih",
+      "authorship_tag": "ABX9TyNVVbE0vIUnawYaKoPRCk2j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1653,6 +1653,94 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BLrBf-3rvAaX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = models.Sequential()\n",
+        "model.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+        "                        input_shape=(150, 150, 3)))\n",
+        "model.add(layers.MaxPool2D(2, 2))\n",
+        "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPool2D((2, 2)))\n",
+        "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPool2D((2, 2)))\n",
+        "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPool2D((2, 2)))\n",
+        "model.add(layers.Flatten())\n",
+        "model.add(layers.Dropout(0.5))\n",
+        "model.add(layers.Dense(512, activation='relu'))\n",
+        "model.add(layers.Dense(1, activation='sigmoid'))\n",
+        "\n",
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer=optimizers.RMSprop(lr=1e-4),\n",
+        "              metrics=['acc'])"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VdOVbn626Rmj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        },
+        "outputId": "7de5f742-6fe1-45a7-9510-b1fc0c6559a2"
+      },
+      "source": [
+        "train_datagen = ImageDataGenerator(\n",
+        "      rescale=1./255,\n",
+        "      rotation_range=40,\n",
+        "      width_shift_range=0.2,\n",
+        "      height_shift_range=0.2,\n",
+        "      shear_range=0.2,\n",
+        "      zoom_range=0.2,\n",
+        "      horizontal_flip=True,)\n",
+        "\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "      train_dir,\n",
+        "      target_size=(150, 150),\n",
+        "      batch_size=32,\n",
+        "      class_mode='binary')\n",
+        "\n",
+        "validation_generator = test_datagen.flow_from_directory(\n",
+        "      validation_dir,\n",
+        "      target_size=(150, 150),\n",
+        "      batch_size=32,\n",
+        "      class_mode='binary')\n",
+        "\n",
+        "history = model.fit_generator(\n",
+        "      train_generator,\n",
+        "      steps_per_epoch=100,\n",
+        "      epochs=100,\n",
+        "      validation_data=validation_generator,\n",
+        "      validation_steps=50)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 2000 images belonging to 2 classes.\n",
+            "Found 1000 images belonging to 2 classes.\n",
+            "Epoch 1/100\n",
+            "100/100 [==============================] - 201s 2s/step - loss: 0.6918 - acc: 0.5132 - val_loss: 0.6718 - val_acc: 0.5742\n",
+            "Epoch 2/100\n",
+            "  6/100 [>.............................] - ETA: 3:03 - loss: 0.6736 - acc: 0.6615"
+          ],
+          "name": "stdout"
         }
       ]
     }
