Revisit tomorrow and try and debug the code.

--- a/Chapter5Deeplearningforcomputervision.ipynb
+++ b/Chapter5Deeplearningforcomputervision.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Chapter5Deeplearningforcomputervision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNXEKJXpDE+bJGqif0Zhpk",
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyPnXeMAVdSBfz/wz+Ndb8I2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -802,9 +803,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 53
         },
-        "outputId": "5a842729-0f39-4933-98c0-ed0426c0ef92"
+        "outputId": "7729d146-a68e-4af8-a469-dea1a8473fd8"
       },
       "source": [
         "try:\n",
@@ -816,15 +817,11 @@
         "  is_google_colab = False\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
             "Mounted at /content/drive\n",
             "In Google CoLab\n"
           ],
@@ -5868,7 +5865,7 @@
         "outputId": "6bd7377f-8aa0-4df7-f511-1645c66e4840"
       },
       "source": [
-        "!ls"
+        "!ls -la "
       ],
       "execution_count": 13,
       "outputs": [
@@ -5938,20 +5935,32 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 280
+          "height": 298
         },
-        "outputId": "0cdc1e2c-4ce5-41ff-ef94-031471152f16"
+        "outputId": "8165493b-b06a-4857-d294-2905872819c7"
       },
       "source": [
-        "import os, shutil\n",
+        "import os, shutil, glob\n",
         "# from earlier find ./drive/My\\ Drive/Colab\\ Notebooks/dogs-vs-cats.zip\n",
         "# /content/drive/My Drive/\n",
         "print(os.getcwd())\n",
         "# current wd is gdrive\n",
         "\n",
+        "#files = glob.glob('/content/drive/My Drive/Colab Notebooks/cats_and_dogs_small/**/*.jpg', recursive=True)\n",
+        "\n",
         "original_dataset_dir = '/content/drive/My Drive/Colab Notebooks'\n",
         "\n",
         "base_dir = '/content/drive/My Drive/Colab Notebooks/cats_and_dogs_small'\n",
+        "#for f in files:\n",
+        "#    try:\n",
+        "#        os.remove(f)\n",
+        "#    except OSError as e:\n",
+        "#        print(\"Error: %s : %s\" % (f, e.strerror))\n",
+        "\n",
+        "#try:\n",
+        "#    os.rmdir(base_dir)\n",
+        "#except OSError as e:\n",
+        "#    print('Error: %s : %s' % (base_dir, e.strerror))\n",
         "os.mkdir(base_dir)\n",
         "\n",
         "train_dir = os.path.join(base_dir, 'train')\n",
@@ -6015,24 +6024,25 @@
         "    dst = os.path.join(test_dogs_dir, fname)\n",
         "    shutil.copyfile(src, dst)"
       ],
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content\n"
+            "/content\n",
+            "Error: /content/drive/My Drive/Colab Notebooks/cats_and_dogs_small : Directory not empty\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "error",
-          "ename": "OSError",
+          "ename": "FileExistsError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-aed6f756cb45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mbase_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/content/drive/My Drive/Colab Notebooks/cats_and_dogs_small'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mtrain_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mOSError\u001b[0m: [Errno 5] Input/output error: '/content/drive/My Drive/Colab Notebooks/cats_and_dogs_small'"
+            "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-ebf1ea467a62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Error: %s : %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrerror\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mtrain_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: '/content/drive/My Drive/Colab Notebooks/cats_and_dogs_small'"
           ]
         }
       ]
@@ -6042,13 +6052,29 @@
       "metadata": {
         "id": "ZnqqDZKiwTSe",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 172
+        },
+        "outputId": "fdb9f03f-3804-4c5f-b175-ba579142ed6c"
       },
       "source": [
         "print('total training cat images:', len(os.listdir(train_cats_dir)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-a4f6e5081b85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'total training cat images:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_cats_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'train_cats_dir' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
